# menuswap

./: .env.example  .gitignore  CLAUDE.md  README.md  next.config.js  package-lock.json  package.json  tailwind.config.ts
app/: globals.css  layout.tsx  loading.tsx  not-found.tsx  page.tsx
app/api/dishes/popular/: route.ts
app/api/menus/: route.ts
app/api/search/dishes/: route.ts
app/api/search/restaurants/: route.ts
app/api/stats/: route.ts
app/api/uploads/: route.ts
app/dish/[city]/[slug]/: page.tsx
app/restaurant/[city]/[slug]/menu/: page.tsx
app/restaurants/: page.tsx
app/restaurants/[city]/[slug]/: page.tsx
app/restaurants/[city]/[slug]/menu/: page.tsx
app/search/: page.tsx
app/steden/: page.tsx
components/dishes/: DishCard.tsx
components/layout/: Footer.tsx  Header.tsx
components/restaurants/: RestaurantCard.tsx
components/search/: SearchFilters.tsx
components/ui/: chart.tsx
components/upload/: MenuUpload.tsx
lib/: auth.ts  sitemap.ts
lib/api/: dishes.ts  menus.ts  restaurants.ts
lib/utils/: dishFilters.ts  slugify.ts
menuswap-scraper/: .env.example  README-SCRAPE.md  pyproject.toml  requirements.txt
menuswap-scraper/src/: config.py  crawl_queue.py  db.py  dish_extractor.py  downloader.py  extractor.py  fetcher.py  log.py  menu_link_finder.py  models.py  pipeline.py  seed_osm.py  utils.py
prisma/: schema.prisma
public/: robots.txt  sitemap.xml
public/sitemaps/: cities-1.xml  dishes-2.xml
scripts/: generate-sitemaps.js  remove-numbers-from-dish-names.js  remove-numbers-from-dish-names.ts
